[tool.poetry]
name = "ros_handson"
version = "0.1.0"
description = ""
authors = ["Masaya Kataoka <ms.kataoka@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4"
mkdocs-material = "^9.1"
fontawesome_markdown = "*"
mkdocs-mermaid2-plugin = "*"
pymdown-extensions = "*"
plantuml-markdown = "*"
mkdocs-git-revision-date-localized-plugin = "*"
mkdocs-gitsnippet-plugin = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
